center div relative-projects in index and fix z-index in span projects and modals

--- a/css/projects.css
+++ b/css/projects.css
@@ -166,7 +166,7 @@ main {
   overflow: hidden;
   transition: box-shadow 0.3s;
   padding: .25rem;
-  max-height: 250px;
+  max-height: 200px;
 }
 
 .project:hover {
@@ -192,7 +192,7 @@ background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
 display: flex; 
 position: absolute; 
 bottom: 0.5rem; 
-z-index: 10; 
+z-index: 1; 
 padding: 1rem; 
 flex-direction: row; 
 flex-wrap: nowrap; 
@@ -268,7 +268,7 @@ color: #ffffff;
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
